--- a/style.css
+++ b/style.css
@@ -58,17 +58,17 @@ p {
     text-transform: uppercase;
     display: flex;
     justify-content:center ;
-    padding: 20px;
+    padding: 10%;
     padding-bottom: 10%;
     font-size: 18px;
     font-weight: bold;
-    text-shadow: 10px 10px 10px rgb(0, 0, 0);
+    text-shadow: 5px 5px 10px rgb(0, 0, 0),5px 5px 10px rgb(0, 0, 0);
     
 }
 
 h1, h2 {
     text-align: center;
-    text-shadow: 5px 5px 15px rgb(161, 40, 40);
+    text-shadow: 5px 5px 15px rgb(161, 40, 40),5px 5px 15px rgb(161, 40, 40);
     font-weight: bolder;
 }
 /* Body */
